--- a/Group Project 106.2/Group Project 106.2.csproj
+++ b/Group Project 106.2/Group Project 106.2.csproj
@@ -101,5 +101,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="covid.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Menu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="new.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
