--- a/Group Project 106.2/Group Project 106.2.csproj
+++ b/Group Project 106.2/Group Project 106.2.csproj
@@ -140,6 +140,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="images\hhome.png" />
     <Resource Include="images\s.png" />
     <Resource Include="images\ss.png" />
     <EmbeddedResource Include="Properties\Resources.resx">
