--- a/Group Project 106.2/Group Project 106.2.csproj
+++ b/Group Project 106.2/Group Project 106.2.csproj
@@ -168,6 +168,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="user-vac.png" />
     <Resource Include="images\hhome.png" />
     <Resource Include="images\s.png" />
     <Resource Include="images\ss.png" />
